@@ -1,14 +1,29 @@
 package com.developerex.server.room;
 
+import com.developerex.server.attendee.AttendeeRepository;
 import com.developerex.server.attendee.dto.AttendeeDto;
 import com.developerex.server.attendee.mapper.AttendeeMapper;
+import com.developerex.server.attendee.model.Attendee;
+import com.developerex.server.room.dto.EditRoomDto;
+import com.developerex.server.room.dto.NewRoomDto;
 import com.developerex.server.room.dto.RoomDto;
+import com.developerex.server.room.dto.RoomInfoDto;
 import com.developerex.server.room.mapper.RoomMapper;
 import com.developerex.server.room.model.Room;
+import com.developerex.server.term.TermRepository;
+import com.developerex.server.term.dto.TermDto;
+import com.developerex.server.term.mapper.TermMapper;
+import com.developerex.server.term.model.Term;
+import com.developerex.server.vote.dto.VoteDto;
+import com.developerex.server.vote.mapper.VoteMapper;
+import com.developerex.server.vote.model.Vote;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import javax.persistence.EntityNotFoundException;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -16,6 +31,8 @@ import java.util.stream.Collectors;
 @AllArgsConstructor
 public class RoomService {
     private final RoomRepository roomRepository;
+    private final AttendeeRepository attendeeRepository;
+    private final TermRepository termRepository;
 
     public List<RoomDto> getAllRooms() {
         return roomRepository.findAll()
@@ -24,8 +41,17 @@ public class RoomService {
                 .collect(Collectors.toList());
     }
 
-    public boolean addRoom(RoomDto roomDto) {
-        Room room = RoomMapper.mapToEntity(roomDto);
+    public boolean addRoom(NewRoomDto roomDto) {
+        Room room = Room.builder()
+                .title(roomDto.title())
+                .description(roomDto.description())
+                .deadline(roomDto.deadline())
+                .terms( new ArrayList<Term>())
+                .participants(roomDto.participants().stream().map(attendeeDto -> attendeeRepository.findById(attendeeDto).orElseThrow(() -> new EntityNotFoundException("No attendee found with id: " + attendeeDto))).collect(Collectors.toSet()))
+                .build();
+
+        room.setOwner(attendeeRepository.findById(roomDto.owner()).orElseThrow(() -> new EntityNotFoundException("No attendee found with id: " + roomDto.owner())));
+
         roomRepository.save(room);
         return true;
     }
@@ -56,12 +82,49 @@ public class RoomService {
                 .collect(Collectors.toList());
     }
 
-//  TODO: Implement this method
-//    public List<AttendeeDto> getRoomInfo(Long roomId) {
-//        return roomRepository.findById(roomId).orElseThrow(() -> new EntityNotFoundException("No room found with id: " + roomId))
-//                .getParticipants()
-//                .stream()
-//                .map(AttendeeMapper::mapToDto)
-//                .collect(Collectors.toList());
-//    }
+    public RoomInfoDto getRoomInfo(Long roomId) {
+        Room room = roomRepository.findById(roomId)
+                .orElseThrow(() -> new EntityNotFoundException("No room found with id: " + roomId));
+
+
+        AttendeeDto owner = AttendeeMapper.mapToDto(room.getOwner());
+
+        List<AttendeeDto> participants = room.getParticipants()
+                .stream()
+                .map(AttendeeMapper::mapToDto)
+                .toList();
+
+        HashMap<TermDto, Long> votesPerTerm = new HashMap<>();
+
+        for (Term term : room.getTerms()) {
+            long votesForTermQuantity = term.getVotes().size();
+
+            votesPerTerm.put(TermMapper.mapToDto(term), votesForTermQuantity);
+        }
+
+        List<VoteDto> allVotes = room.getTerms()
+                .stream()
+                .flatMap(term -> term.getVotes().stream())
+                .map(VoteMapper::mapToDto)
+                .toList();
+
+        return RoomInfoDto.builder()
+                .owner(owner)
+                .participants(participants)
+                .votesPerTerm(votesPerTerm)
+                .allVotes(allVotes)
+                .build();
+    }
+
+    public EditRoomDto editRoom(EditRoomDto data) {
+        Room room = roomRepository.findById(data.id())
+                .orElseThrow(() -> new EntityNotFoundException("No room found with id: " + data.id()));
+
+        room.setTitle(data.title());
+        room.setDescription(data.description());
+        room.setDeadline(data.deadline());
+        roomRepository.save(room);
+
+        return data;
+    }
 }
